--- a/index.html
+++ b/index.html
@@ -7,19 +7,19 @@
   </head>
   <body>
     <h1 id="title" class="btn">This works</h1>
-    <!-- <script src="index.js"></script> -->
     <div class="js-clock">
       <h1>00:00</h1>
     </div>
     <form class="js-form form">
-      <input type="text" placeholder="What is your name?" />
+      <input type="text" class="basic-slide" placeholder="Write Your Name" />
     </form>
     <h4 class="js-greeting greetings"></h4>
     <form class="js-toDoForm">
-      <input type="text" placeholder="Write a to do" />
+      <input type="text" placeholder="What To Do" />
     </form>
     <ul class="js-toDoList" style="list-style: none"></ul>
     <span class="js-weather"></span>
+    <script src="quotes.js"></script>
     <script src="clock.js"></script>
     <script src="gretting.js"></script>
     <script src="todo.js"></script>
